--- a/code/guides_list.html
+++ b/code/guides_list.html
@@ -188,7 +188,7 @@
 		<div class="nav__item nav__item_type_category-action">
 		    <a href="#" class="link menu__link">
 			<strong class="menu-item-title">
-			    задать вопрос
+			    создать гайд
 			</strong>
 		    </a>
 		</div>
@@ -435,10 +435,12 @@
 			    </div>
 			</div>
 
+			<a href="#" class="link view-more">Показать еще 10</a>
+
 
 		    </div> <!-- / main -->
 		    <div class="sidebar"> <!-- sidebar -->
-		<aside class="aside aside_style_blue">
+			<aside class="aside article_style_blue">
 			    <h3 class="aside__header">
 				<a href="#" class="link">
 				    <span class="userpic box box_base">
@@ -464,6 +466,25 @@
 					+ 12
 				    </a>
 				</div>
+			    </div>
+			</aside>
+			<aside class="aside">
+			    <h3 class="aside__header">
+				<a class="link bg-style_blue" href="#">
+				    <span class="aside__header__text">Заявки на гайды: 456</span>
+				    <span class="action-menu box box_base"><i class="ico ico_content_arrow-next"></i></span>
+				</a>
+			    </h3>
+			</aside>
+			<aside class="aside">
+			    <div class="aside__content">
+				<ul class="links">
+				    <li class="links__item"><a href="#" class="link">Британские кошки</a></li>
+				    <li class="links__item"><a href="#" class="link">Препараты для выведения блох</a></li>
+				    <li class="links__item"><a href="#" class="link">Балинезийские кошки</a></li>
+				    <li class="links__item"><a href="#" class="link">Сравнение ветеринарных клиник</a></li>
+				    <li class="links__item"><a href="#" class="link">Британские кошки</a></li>
+				</ul>
 			    </div>
 			</aside>
 		    </div> <!-- / sidebar -->
