--- a/code/questions_breeds.html
+++ b/code/questions_breeds.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="css/styles.css" />
 
     <script src="js/jquery-1.10.0.min.js"></script>
-    <script src="js/common.js"></script>
     <script src="js/jquery.formstyler.min.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/jquery.carouFredSel-6.2.1.min.js"></script>
+    <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="js/common.js"></script>
 
 
     <!--[if lte IE 8 ]>
@@ -533,7 +534,7 @@
 		    </div> <!-- / main -->
 		    <div class="sidebar"> <!-- sidebar -->
 
-			<aside class="aside aside_style_blue">
+			<aside class="aside article_style_blue">
 			    <h3 class="aside__header">
 				<a href="#" class="link">
 				    <span class="userpic box box_base">
