--- a/code/guides_requests.html
+++ b/code/guides_requests.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="css/styles.css" />
 
     <script src="js/jquery-1.10.0.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="js/jquery.formstyler.min.js"></script>
-
+    <script src="js/common.js"></script>
 
     <!--[if lte IE 8 ]>
         <link rel="stylesheet" media="screen" href="css/styles_ie.css" />
@@ -25,6 +25,7 @@
     <!--[if lt IE 9]>
         <script src="js/html5shiv.js"></script>
     <![endif]-->
+
 
 
 </head>
@@ -81,7 +82,7 @@
 		</div>
 		<div class="nav__item nav__item_type_sections">
 		    <ul class="menu menu__main">
-			<li class="menu__item menu__item_active">
+			<li class="menu__item">
 			    <a href="#" class="link menu__link">
 				<strong class="menu-item-title">
 				    вопросы
@@ -115,7 +116,7 @@
 				</li>
 			    </ul>
 			</li>
-			<li class="menu__item">
+			<li class="menu__item menu__item_active">
 			    <a href="#" class="link menu__link">
 				<strong class="menu-item-title">
 				    гайды
@@ -189,7 +190,7 @@
 		<div class="nav__item nav__item_type_category-action">
 		    <a href="#" class="link menu__link">
 			<strong class="menu-item-title">
-			    задать вопрос
+			    создать гайд
 			</strong>
 		    </a>
 		</div>
@@ -240,12 +241,12 @@
 	    </section> <!-- / navigator  -->
 
 	    <header class="page-header"> <!-- page-header -->
-		<h1 class="page-title">Породные форумы 95</h1>
+		<h1 class="page-title">Заявки на гайды 82</h1>
 		<ul class="menu menu_sub">
 		    <li class="menu__item">
 			<a href="#" class="link menu__link">
 			    <strong class="menu-item-title">
-				абиссинская
+				Сегодня
 				<small class="counter">51</small>
 			    </strong>
 			</a>
@@ -253,7 +254,7 @@
 		    <li class="menu__item">
 			<a href="#" class="link menu__link">
 			    <strong class="menu-item-title">
-				британская
+				Вчера
 				<small class="counter">52</small>
 			    </strong>
 			</a>
@@ -261,7 +262,7 @@
 		    <li class="menu__item">
 			<a href="#" class="link menu__link">
 			    <strong class="menu-item-title">
-				скоттиш-фолд
+				За неделю
 				<small class="counter">90</small>
 			    </strong>
 			</a>
@@ -274,179 +275,151 @@
 
 		    <div class="main"> <!-- main -->
 
-
-			<div class="standard-element profile-list">
-			    <div class="standard-element__header">
-				<span class="box box_base bg-style_blue">4</span>
-				<div class="standard-element__link">
-				    <span class="standard-element__title">Питание</span>
+			<ul class="guides-list guides-list_requests">
+			    <li class="guides-list__item">
+				<div class="guide">
+				   <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+74</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Диагноз</span>
+				    </a>
 				</div>
-			    </div>
-			    <div class="standard-element__content">
-				<div class="standard-element standard-element_profile">
-				    <div class="standard-element__header standard-element__header_white">
-					<a href="#" class="standard-element__link">
-					    <span class="standard-element__title">Мария Бладахонова</span>
-					</a>
-					<div class="action-menu">
-					    <a class="box box_base box_comments" href="#">
-						<i class="ico ico_content_comments-s"></i> 89
-					    </a>
-					    <a class="box box_base box_plus" href="#">
-						+23
-					    </a>
-					    <a class="box box_base box_guide" href="#">
-						<i class="ico ico_content_pencil"></i>23
-					    </a>
-					</div>
-				    </div>
-				    <div class="standard-element__content">
-					<a href="#" class="standard-element__thumbnail">
-					    <img class="standard-element__image" src="images/content/expert1.png" alt="Мария Бладахонова" title="Мария Бладахонова" />
-					</a>
-					<div class="profile">
-					    <h5 class="experience">Биолог-заводчик, владелец питомника, врач-перкуссионист</h5>
-					    <div class="work">Питомник бельгийских кошек «HildaBeng», г. Томск
-						Клиника «Реставрация», г. Томск</div>
-					    <small class="date">12 мар</small>
-					</div>
-				    </div>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				  <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+74</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Имбридинг</span>
+				    </a>
 				</div>
-				<div class="standard-element standard-element_profile">
-				    <div class="standard-element__header standard-element__header_white">
-					<a href="#" class="standard-element__link">
-					    <span class="standard-element__title">Анатолий Александрович Соляковский</span>
-					</a>
-					<div class="action-menu">
-					    <a class="box box_base box_comments" href="#">
-						<i class="ico ico_content_comments-s"></i> 89
-					    </a>
-					    <a class="box box_base box_plus" href="#">
-						+233
-					    </a>
-					    <a class="box box_base box_guide" href="#">
-						<i class="ico ico_content_pencil"></i>23
-					    </a>
-					</div>
-				    </div>
-				    <div class="standard-element__content">
-					<a href="#" class="standard-element__thumbnail">
-					    <img class="standard-element__image" src="images/content/expert2.png" alt="Мария Бладахонова" title="Мария Бладахонова" />
-					</a>
-					<div class="profile">
-					    <h5 class="experience">Биолог-перкуссионист</h5>
-					    <div class="work">Питомник бельгийских кошек «HildaBeng», г. Томск</div>
-					    <small class="date">12 мар</small>
-					</div>
-				    </div>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				   <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+44</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Рецепты натурального питания для кошек</span>
+				    </a>
 				</div>
-
-			    </div>
-			</div>
-
-			<div class="standard-element profile-list">
-			    <div class="standard-element__header">
-				<span class="box box_base bg-style_blue">1</span>
-				<div class="standard-element__link">
-				    <span class="standard-element__title">Уход и содержание</span>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				    <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+44</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Устройство ЖКТ кошки</span>
+				    </a>
 				</div>
-			    </div>
-			    <div class="standard-element__content">
-				<div class="standard-element standard-element_profile">
-				    <div class="standard-element__header standard-element__header_white">
-					<a href="#" class="standard-element__link">
-					    <span class="standard-element__title">Мария Бладахонова</span>
-					</a>
-					<div class="action-menu">
-					    <a class="box box_base box_comments" href="#">
-						<i class="ico ico_content_comments-s"></i> 89
-					    </a>
-					    <a class="box box_base box_plus" href="#">
-						+23
-					    </a>
-					    <a class="box box_base box_guide" href="#">
-						<i class="ico ico_content_pencil"></i>23
-					    </a>
-					</div>
-				    </div>
-				    <div class="standard-element__content">
-					<a href="#" class="standard-element__thumbnail">
-					    <img class="standard-element__image" src="images/content/expert1.png" alt="Мария Бладахонова" title="Мария Бладахонова" />
-					</a>
-					<div class="profile">
-					    <h5 class="experience">Биолог-заводчик, владелец питомника, врач-перкуссионист</h5>
-					    <div class="work">Питомник бельгийских кошек «HildaBeng», г. Томск<br />
-						Клиника «Реставрация», г. Томск</div>
-					    <small class="date">12 мар</small>
-					</div>
-				    </div>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				 <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+44</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Витамины</span>
+				    </a>
 				</div>
-				<div class="standard-element standard-element_profile">
-				    <div class="standard-element__header standard-element__header_white">
-					<a href="#" class="standard-element__link">
-					    <span class="standard-element__title">Анатолий Александрович Соляковский</span>
-					</a>
-					<div class="action-menu">
-					    <a class="box box_base box_comments" href="#">
-						<i class="ico ico_content_comments-s"></i> 89
-					    </a>
-					    <a class="box box_base box_plus" href="#">
-						+233
-					    </a>
-					    <a class="box box_base box_guide" href="#">
-						<i class="ico ico_content_pencil"></i>23
-					    </a>
-					</div>
-				    </div>
-				    <div class="standard-element__content">
-					<a href="#" class="standard-element__thumbnail">
-					    <img class="standard-element__image" src="images/content/expert2.png" alt="Мария Бладахонова" title="Мария Бладахонова" />
-					</a>
-					<div class="profile">
-					    <h5 class="experience">Биолог-перкуссионист</h5>
-					    <div class="work">Питомник бельгийских кошек «HildaBeng», г. Томск</div>
-					    <small class="date">12 мар</small>
-					</div>
-				    </div>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				   <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+44</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Выбор промышленного корма</span>
+				    </a>
 				</div>
-				<div class="standard-element standard-element_profile">
-				    <div class="standard-element__header standard-element__header_white">
-					<a href="#" class="standard-element__link">
-					    <span class="standard-element__title">Мармот Маршан</span>
-					</a>
-					<div class="action-menu">
-					    <a class="box box_base box_comments" href="#">
-						<i class="ico ico_content_comments-s"></i> 89
-					    </a>
-					    <a class="box box_base box_plus" href="#">
-						+233
-					    </a>
-					    <a class="box box_base box_guide" href="#">
-						<i class="ico ico_content_pencil"></i>23
-					    </a>
-					</div>
-				    </div>
-				    <div class="standard-element__content">
-					<a href="#" class="standard-element__thumbnail">
-					    <img class="standard-element__image" src="images/content/expert2.png" alt="Мария Бладахонова" title="Мария Бладахонова" />
-					</a>
-					<div class="profile">
-					    <h5 class="experience">Биолог-перкуссионист, владелец питомника</h5>
-					    <div class="work">Питомник бельгийских кошек «HildaBeng», <br />г. Томск</div>
-					    <small class="date">12 мар</small>
-					</div>
-				    </div>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				  <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+74</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Диагноз</span>
+				    </a>
 				</div>
-			    </div>
-			</div>
-
-
-
-
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				  <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+74</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Имбридинг</span>
+				    </a>
+				</div>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				   <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+44</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Рецепты натурального питания для кошек</span>
+				    </a>
+				</div>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				    <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+44</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Устройство ЖКТ кошки</span>
+				    </a>
+				</div>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				   <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+44</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Витамины</span>
+				    </a>
+				</div>
+			    </li>
+			    <li class="guides-list__item">
+				<div class="guide">
+				   <div class="box box_base"> <span class="like-box"><i class="ico ico_content_plus-w"></i>
+					   <span class="like-box__text">Добавить свой голос</span></span>
+				   </div>
+				    <a href="#" class="box box_base bg-style_gray-light">+44</a>
+				    <a href="#" class="link guide__link">
+					<span class="guide__title">Выбор промышленного корма</span>
+				    </a>
+				</div>
+			    </li>
+			</ul>
+			<form class="form form_comment" action="#" method="post">
+			    <fieldset class="fieldset">
+				<div class="form-field">
+				    <input type="text" class="field field_type_text" placeholder="Ваша заявка на гайд..." />
+				</div>
+				<span class="btn bg-style_blue"><input class="btn__in" type="submit" value="Отправить"/></span>
+			    </fieldset>
+			</form>
 
 		    </div> <!-- / main -->
 		    <div class="sidebar"> <!-- sidebar -->
-
 			<aside class="aside article_style_blue">
 			    <h3 class="aside__header">
 				<a href="#" class="link">
@@ -466,10 +439,10 @@
 				    </div>
 				</article>
 				<div class="action-menu">
-				    <a href="#" class="box box_base">
+				    <a href="#" class="box box_base box_comments">
 					<i class="ico ico_content_comments-s"></i> 89
 				    </a>
-				    <a href="#" class="box box_base">
+				    <a href="#" class="box box_base box_plus">
 					+ 12
 				    </a>
 				</div>
