--- a/code/guides_experts.html
+++ b/code/guides_experts.html
@@ -274,7 +274,7 @@
 		    <div class="main"> <!-- main -->
 
 			<div class="standard-element">
-			    <div class="standard-element__header standard-element__header_white">
+			    <div class="standard-element__header">
 				<span class="box box_base bg-style_red-light"><i class="ico ico_content_pencil"></i>45</span>
 				<span class="userpic box_base">
 				    <a href="#" class="userpic__link">
@@ -319,7 +319,7 @@
 			</div>
 
 			<div class="standard-element">
-			    <div class="standard-element__header standard-element__header_white">
+			    <div class="standard-element__header">
 				<span class="box box_base bg-style_red-light"><i class="ico ico_content_pencil"></i>2</span>
 				<span class="userpic box_base">
 				    <a href="#" class="userpic__link">
@@ -355,7 +355,7 @@
 			</div>
 
 			<div class="standard-element">
-			    <div class="standard-element__header standard-element__header_white">
+			    <div class="standard-element__header">
 				<span class="box box_base bg-style_red-light"><i class="ico ico_content_pencil"></i>2</span>
 				<span class="userpic box_base">
 				    <a href="#" class="userpic__link">
